# susitna

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc.json  .prettierignore  .swcrc  .swcrc.build  Cargo.toml  README.md  app.ts  architecture.mmd  ast.citree  block.ts  build.json  build.mjs  bytecode.ts  cast.ts  cli.ts  commander.ts  compiler.ts  config.mts  config.ts  constants.njk.ts  constants.ts  constants.ts.njk  consts.d.ts  container.ts  debug.njk.mts  debug.njk.ts  debug.ts  editor.mts  editor.ts  env.mts  error-examples.txt  errors.ts  eslint.config.mjs  exceptions.mts  exceptions.ts  executor.mts  executor.ts  (+53 more)
.husky/: pre-commit
adrs/: 001-encoding-language.md  002-architecture.md  002-sigils.md  003-architecture.md  003-recursive-descent.md  004-expect-tests.md  004-recursive-descent.md  005-editor.md  005-expect-tests.md  006-editor.md  006-runtime-exit.md  007-type-semantics.md  008-sigils.md  009-type-awareness.md  010-architecture-revisited.md  011-let-assign-semantics.md  012-execution-domain-model.md  012-if-then-else.md  013-if-then-else.md  014-opentelemetry.md  015-string-concat-operator.md  016-ecma-55-compliance.md  017-grabthar.md
ast/: ast.citree  cmd.ts  expr.mts  expr.ts  index.citree  index.ts  instr.mts  instr.ts  line.ts  program.ts  source.ts  util.mts  util.ts
bytecode/: address.ts  chunk.mts  chunk.ts  disassembler.mts  disassembler.ts  index.ts  opcodes.ts  short.mts  short.ts
commands/: base.mts  base.ts  expression.mts  expression.ts  index.mts  index.ts  list.mts  list.ts  load.mts  load.ts  new.mts  new.ts  renum.mts  renum.ts  run.mts  run.ts  save.mts  save.ts
compiler/: base.mts  base.ts  block.mts  block.ts  command.mts  command.ts  index.mts  (+1 more)
debug/crates/debug/: Cargo.toml
debug/crates/debug/src/: lib.rs
span/crates/span/: Cargo.toml
span/crates/span/src/: lib.rs
tracer/crates/tracer/: Cargo.toml
tracer/crates/tracer/src/: lib.rs
(+423 files in other folders)
