[package]
name = "shell-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.8"
indexmap = "2.1.0"
nom = "7.1.3"
nom_locate = "4.2.0"
rustyline = "12.0.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
