[package]
name = "span"
version = "0.1.0"
description = "A span built on Rust's tracing crate"
authors = ["Josh Holbrook"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
neon = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
