[package]
name = "tracer"
version = "1.0.0"
description = "Matanuska's debug tracer"
authors = ["Josh Holbrook"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1", features = ["futures"] }
once_cell = "1.20.2"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
